[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
lazy_static = "1.4.0"
itertools = "0.10.1"
num = "0.4.0"
dotenv = "0.15.0"
reqwest = {version="0.11.7", features=["blocking"]}
